# soc-deploy-framework

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
external_plugins/cortex/: backup_restore.py  configure.py  install.py  plugin.py  validate.py
external_plugins/misp/: backup_restore.py  configure.py  install.py  plugin.py  validate.py
external_plugins/openvas/: backup_restore.py  configure.py  install.py  plugin.py  validate.py
external_plugins/shuffle/: backup_restore.py  configure.py  install.py  plugin.py  validate.py
external_plugins/suricata/: backup_restore.py  configure.py  install.py  plugin.py  validate.py
external_plugins/thehive/: backup_restore.py  configure.py  install.py  plugin.py  validate.py
external_plugins/wazuh/: backup_restore.py  configure.py  install.py  plugin.py  validate.py
external_plugins/zeek/: backup_restore.py  configure.py  install.py  plugin.py  validate.py
scripts/: run_multi_distro_tests.sh
soc_deploy/: __init__.py  bootstrap.py
soc_deploy/cli/: commands.py  formatters.py  main.py  menus.py
soc_deploy/core/: context.py  engine.py  exceptions.py  state.py
soc_deploy/database/: manager.py  schema.sql
soc_deploy/deployment/: dependency.py  planner.py
soc_deploy/models/: config.py  report.py
soc_deploy/plugins/: base.py  loader.py  registry.py
soc_deploy/services/: backup.py  docker.py  executor.py  file.py  package.py  system.py  validator.py
soc_deploy/utils/: logger.py
tests/: conftest.py
tests/integration/: conftest.py  test_plugin_lifecycle.py  test_resume.py  test_rollback.py  test_system_checks.py
tests/unit/: test_backup.py  test_database.py  test_engine.py  test_executor.py  test_package.py  test_system.py
