[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "soc-deploy-framework"
version = "0.1.0"
description = "Framework d'orchestration et de déploiement de SOC"
authors = [
    {name = "Mannau KINTONOU",email = "jeanbaptistekintonou@gmail.com"}
]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Mannau95/soc-deploy-framework"
documentation = "https://soc-deploy.readthedocs.io"
keywords = ["soc", "deployment", "orchestration", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Systems Administration",
]

[tool.poetry.dependencies]
dependencies = [
    "typer[all] (>=0.26.8,<0.27.0)",
    "rich (>=15.0.0,<16.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "click (>=8.4.2,<9.0.0)",
    "questionary (>=2.1.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "ruff (>=0.15.21,<0.16.0)",
    "mypy (>=2.3.0,<3.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "coverage (>=7.15.1,<8.0.0)"
]

[tool.poetry.scripts]
soc-deploy = "soc_deploy.cli.main:app"

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = ["E501"]  # line too long, handled by black

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --cov=soc_deploy --cov-report=term-missing"